[tool.poetry]
name = "zig-md2020"
version = "0.1.0"
description = ""
authors = ["Jesus Alvarez <jeezusjr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
json-diff = "^1.5.0"
wheel = "^0.35.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
